<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>francor_launch</name>
  <version>0.0.0</version>
  <description>The francor_launch package</description>
  <maintainer email="michael.schmidtpeter@francor.de">Michael Schmidpeter</maintainer>
  <maintainer email="helmut.engelhardt@francor.de">Helmut Engelhardt</maintainer>
  <license>BSD3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>ydlidar_ros2_driver</exec_depend>
  <exec_depend>francor_servo_lx16a</exec_depend>
  <exec_depend>francor_frank_base</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
